-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.10.7, Lustre 2.12.1
-
None
-
3
-
9223372036854775807
If a non-directory item is created in a SGID directory, it is possible that the SGID flag is not properly cleared, leaving the item with incorrect group ownership and flags.
This is mitigated by mounting Lustre with the -o nosuid mount option on the client.
The upstream kernel has a similar issue that was fixed in commit https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit/?id=0fa3ecd87848c9c93c2c828ef4c3a8ca36ce46c7