lustre/tests/sanity.sh
@@ -19595,6 +19595,34 @@ test_418() {
 }
 run_test 418 "df and lfs df outputs match"
 
+test_420()
+{
+	[[ $MDS1_VERSION -ge $(version_code 2.12.1) ]] ||
+		skip "Need MDS version at least 2.12.1"
+
+	local SAVE_UMASK=$(umask)
+	local dir=$DIR/$tdir
+	local uname=$(getent passwd $RUNAS_ID | cut -d: -f1)
+
+	mkdir -p $dir
+	umask 0000
+	mkdir -m03777 $dir/testdir
+	ls -dn $dir/testdir
+	local dirperms=$(ls -dn $dir/testdir | awk '{print $1}')
+	[ $dirperms == "drwxrwsrwt" ] ||
+		error "incorrect perms on $dir/testdir"
+
+	$PDSH ${uname}@localhost "PATH=$LUSTRE/tests:\$PATH; \
+		openfile -f O_RDONLY:O_CREAT -m 02755 $dir/testdir/testfile"
+	ls -n $dir/testdir/testfile
+	local fileperms=$(ls -n $dir/testdir/testfile | awk '{print $1}')
+	[ $fileperms == "-rwxr-xr-x" ] ||
+		error "incorrect perms on $dir/testdir/testfile"
+
+	umask $SAVE_UMASK
+}
+run_test 420 "clear SGID bit on non-directories for non-members"
+
 prep_801() {
 	[[ $(lustre_version_code mds1) -lt $(version_code 2.9.55) ]] ||
 	[[ $OST1_VERSION -lt $(version_code 2.9.55) ]] &&
